--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
